--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/auth-ui-react": "^0.2.2",
     "@supabase/supabase-js": "^2.0.4",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
