--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-collapsible": "^2.10.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0"
   },
