--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/auth-ui-react": "^0.2.2",
     "@supabase/supabase-js": "^2.0.4",
+    "framer-motion": "^7.6.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-countdown": "^2.3.3",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
-    "react-promise-tracker": "^2.1.1",
     "react-spinners": "^0.13.6"
   },
   "devDependencies": {
