--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-countdown": "^2.3.3",
+    "react-countdown-circle-timer": "^3.1.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.6"
